fixed spacing between review and name

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -862,6 +862,7 @@ position: relative;
     height: 150px;
     padding-left: 20px;
     padding-right: 20px;
+    gap:1rem;
 }
 
 
